<resources>
    <string name="app_name">RemindMe</string>
    <string name="termin">Termin</string>
    <string name="sortieren">Sortieren</string>
    <string name="search">Search</string>
    <string name="datum">Datum</string>
    <string name="prioritaet">Priorität</string>
    <string name="abgeschlossen">Abgeschlossen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="terminname_eingeben">Terminname eingeben</string>
    <string name="niedrig">Niedrig</string>
    <string name="mittel">Mittel</string>
    <string name="hoch">Hoch</string>
    <string name="title_alertDialog">Wähle die Priorität aus</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_festlegen">Alarm festlegen</string>
    <string name="speichern">Speichern</string>
    <string name="termin_hinzufuegen">Termin hinzufügen</string>
    <string name="termin_bearbeiten">Termin bearbeiten</string>
    <string name="termin_gespeichert">Termin gespeichert</string>
    <string name="termin_nicht_gespeichert">Termin nicht gespeichert</string>
    <string name="zu_erledigen_bis">Zu erledigen bis</string>
    <string name="fehler_bearbeiten">Fehler: Änderungen wurden nicht gespeichert</string>
    <string name="termin_bearbeitet">Termin bearbeitet</string>


    <string-array name="prioritaet_liste">
        <item>@string/niedrig</item>
        <item>@string/mittel</item>
        <item>@string/hoch</item>
    </string-array>
</resources>
