<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTerminName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/terminname_eingeben"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <requestFocus />

    <Button
        android:id="@+id/buttonPrioritaet"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/editTextTerminName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/textViewPrioritaet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niedrig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/editTextTerminName"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrioritaet" />

    <!--  add effect with ?attr/selectableItemBackground -->

    <Switch
        android:id="@+id/switchAlarm"
        android:layout_width="370dp"
        android:layout_height="18dp"
        android:layout_gravity="center_vertical"
        android:checked="false"
        android:text="@string/alarm"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/buttonAlarm"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_access_alarm_24dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/alarm_festlegen"
        android:textAllCaps="false"
        android:textAlignment="viewStart"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAlarm" />

    <Button
        android:id="@+id/buttonDatum"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableStart="@drawable/ic_date_black_24dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/zu_erledigen_bis"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/buttonAlarm"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>